# RustyBlitzcrank

./: Cargo.toml  README.md  currentdiff.diff
.github/workflows/: manual.yml
resources/: words.json
src/: constants.rs  main.rs  websites.rs  words.json
src/commands/: ai.rs  freaky.rs  gif.rs  gpt.rs  help.rs  jerma.rs  mod.rs  name.rs  password.rs  ping_voice.rs  roll.rs  search.rs  song.rs  vid.rs
src/common/: helpers.rs  mod.rs
