[package]
name = "rusty_blitzcrank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
#serenity = "0.11"
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json"] }
serde_json = "1.0.96"
cron = "0.12.0"
chrono = "0.4.24"
twitter-v2 = "0.1.8"
regex = "1.8.1"